missing table horizontal scroll fixed (#1017)

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -893,7 +893,6 @@ body {
 
 .jet-data-table::-webkit-scrollbar {
   background: transparent;
-  height: 0;
 }
 
 .jet-data-table:hover {
